# facemoment

./: CLAUDE.md  README.md  pyproject.toml  report.json
docs/: architecture-vision.md  phase-11-summary.md  problems-and-solutions.md  stream-synchronization.md
src/facemoment/: __init__.py  cli.py  main.py
src/facemoment/cli/: __init__.py  utils.py
src/facemoment/cli/commands/: benchmark.py  debug.py  info.py  process.py
src/facemoment/moment_detector/: __init__.py  detector.py  visualize.py
src/facemoment/moment_detector/extractors/: __init__.py  base.py  dummy.py  expression.py  face.py  face_classifier.py  face_detect.py  gesture.py  outputs.py  pose.py  quality.py
src/facemoment/moment_detector/extractors/backends/: __init__.py  base.py  face_backends.py  pose_backends.py
src/facemoment/moment_detector/fusion/: __init__.py  base.py  dummy.py  highlight.py
src/facemoment/moment_detector/visualize/: __init__.py  components.py  stats_panel.py  timeline_panel.py  video_panel.py
src/facemoment/observability/: __init__.py  records.py  sinks.py
src/facemoment/pipeline/: __init__.py  config.py  orchestrator.py  pathway_pipeline.py
src/facemoment/process/: __init__.py  extractor.py  fusion.py  orchestrator.py
src/facemoment/tools/: visualizer.py
tests/: test_api.py  test_face_classifier.py  test_face_extractor.py  test_gesture_extractor.py  test_highlight_fusion.py  test_integration_process.py  test_moment_detector.py  test_pathway_pipeline.py  test_pipeline.py  test_pose_extractor.py  test_process.py  test_quality_extractor.py  test_visualize.py
